--- a/index.jade
+++ b/index.jade
@@ -19,29 +19,269 @@ head
       document.write( '<link rel="stylesheet" href="css/print/' + ( window.location.search.match( /print-pdf/gi ) ? 'pdf' : 'paper' ) + '.css" type="text/css" media="print">' );
     //if lt IE 9
       script(src='lib/js/html5shiv.js')
+    link(rel='stylesheet', href='css/main.css')
   body
     .reveal
       //
          Any section element inside of this container is displayed as a slide 
       .slides
         section
-          h1 Reveal.js
-          h3 HTML Presentations Made Easy
+
+        section
+          h2 Mapa y foro de tunuyan
+          aside.notes
+            | Tunuyán, un lugar hermoso, pero para un adolescente no pasa nada
+
+        section
+          p
+            los primeros libros
+
+        section
+          h2 curiosidad
+          h2 cuestionamiento
+
+        section
+          h2 imagen universidad
+
+        section
+          h2 imagen harry potter
+          aside.notes
+            ul
+              li aprender a pensar pensando
+              li aprender a experimentar experimentando
+              li open-source
+              li con la cantidad de cosas que hay para aprender, por que estoy aprendiendo cosas q no quiero
+
+            h3 1er experimento -- dejar la universidad, comenzar a trabajar
+            ul
+              li como practicante aprender solo a través de internet
+
+        section
+          h2 conocimiento libre
+          h2 incertidumbre
+          h2 desafío
+
+          aside.notes
+            p Muchos experimentos: viajar, y trabajar en empresas grandes, medianas y pequeñas, como freelancer, hacer investigación
+            p Armar un arcenal de herramientas open source -- la herramienta correcta para el problema indicado
+            p Principal problema: cuando uno se vuelve funcional a una empresa, tu jefe ya no quiere que hagas otra cosa
+
+        section
+          h2 bored cat
+
+        section
+          div
+            h2 monotonía
+            h2 aburrimiento
+
+          .fragment
+            h1 &ne; 
+            h2 libertad
+            h2 pasión
+            h2 diversión
+
+          aside.notes
+            p Ya nunca más voy a volver a poder trabajar en relación de dependencia
+
+        section.spaced
+          h1
+            i &iquest;No será que soy emprendedor?
+
+        section
+          h2 kiko y escuelab
+
+        section
+          section
+            h2 1er experimento:
+            h2
+              a(href="https://twitter.com/hablemosquechua" target="_blank") @hablemosquechua
+
+          section.tweets
+            div
+              | <blockquote class="twitter-tweet" align="center"><p>La palabra en quechua para &quot;amor&quot; podría ser &quot;khuyay&quot;</p>&mdash; hablemos quechua (@hablemosquechua) <a href="https://twitter.com/hablemosquechua/statuses/319590138407710720">April 3, 2013</a></blockquote>
+              | <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+
+              | <blockquote class="twitter-tweet" align="center"><p>Cuando a los incas los hackeaban, ponian cara de preocupación y decian &quot;hackearpariwanchik&quot; via <a href="https://twitter.com/sankaypillo">@sankaypillo</a></p>&mdash; hablemos quechua (@hablemosquechua) <a href="https://twitter.com/hablemosquechua/statuses/378646908291399680">September 13, 2013</a></blockquote>
+              | <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+
+            aside.notes
+              | 100 followers en 1 hora, 6000+ followers
+              | campaña para san valentin: trending topic en peru y 500 followers en un día
+
+
+          section.tweets
+            div
+              | <blockquote class="twitter-tweet" align="center"><p>Vecinos, ojo!&#10; ¿Caminar malecón ser peligroso? ¿Qué hará hoy mi alcalde?&#10; <a href="http://t.co/ZKt1HhNJ">http://t.co/ZKt1HhNJ</a></p>&mdash; Lléname tu Agenda (@llenametuagenda) <a href="https://twitter.com/llenametuagenda/statuses/128154511259873280">October 23, 2011</a></blockquote>
+              | <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+
+              | <blockquote class="twitter-tweet" align="center"><p>Vecinos, en este momento.&#10; Atropellaron a un chico en la esquina.&#10; ¿Qué hizo la semana pasada mi alcalde?&#10; <a href="http://t.co/txIqOwxH">http://t.co/txIqOwxH</a></p>&mdash; Lléname tu Agenda (@llenametuagenda) <a href="https://twitter.com/llenametuagenda/statuses/126543663668019202">October 19, 2011</a></blockquote>
+              | <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+
+            aside.notes
+              | 100 followers en 2 meses, 2 años despues tiene 200
+
+          section
+            h3 &iquest; Qué aprendimos?
+            ul
+              li
+                h2 poesía
+              li
+                h2 humanización
+
+        section
+          section
+            h2 2ndo experimento:
+            h2 Hackatones y open data
+
+          section
+            h2 fotos
+            aside.notes
+              | Hace 2 años comenzamos con la muni lima. El año pasado hicimos la hackatón de lima, este año la está organizando independientemente con los entregables de nuestro estudio
+
+          section
+            h2 lima.io
+
+          section
+            h3 &iquest; Qué aprendimos?
+            ul
+              li
+                h2 es un proceso
+              li
+                h2 es replicable
+              li
+                h2 faltan datos abiertos
+              li
+                h2 sobra talento
+
+        section
+          section
+            h2 3er experimento:
+            h2 Apropiación tecnológica
+
+          section
+            h2 fotos de techcamp, ciencia de garage y pixelhack
+            aside.notes
+              | trabajamos con adolescentes, jovenes y ongs
+              | los procesos con los jóvenes fueron un éxito
+              | los procesos de las ongs quedaron truncos, porque sus problemas son demasiados comunes y aburridos
+
+          section
+            h3 &iquest; Qué aprendimos?
+            ul
+              li
+                h2 los jóvenes son más ágiles
+              li
+                h2
+                  | la
+                  | <big>diversión</big>
+                  | es fundamental
+              li
+                h2 la apropiación no se puede tercerizar
+
+        section
+          section
+            h2 4to experimento:
+            h2 Coworking
+
+            aside.notes
+              | hoy estamos sin espacio y sin todavía saber si queremos uno
+
+          section
+            h3 &iquest; Qué aprendimos?
+            ul
+              li
+                h2 el centro de lima no es ideal
+              li
+                h2 espacios desaprovechados
+              li
+                h2 gente chévere
+
+        section(data-transition="none")
+          h2 &nbsp;
+          div(style="float: left")
+            ul
+              li
+                h3 curiosidad
+              li
+                h3 cuestionamiento
+              li
+                h3 experimentación
+              li
+                h3 desafío
+              li
+                h3 conocimiento libre
+          div(style="float: right")
+            ul
+              li
+                h3 incertidumbre
+              li
+                h3 pasión
+              li
+                h3 libertad
+              li
+                h3 creatividad
+              li
+                h3 diversión
+
+        section(data-transition="none" style="clear: both;")
+          h2 Valores del HACKER
+          div(style="float: left")
+            ul
+              li
+                h3 curiosidad
+              li
+                h3 cuestionamiento
+              li
+                h3 experimentación
+              li
+                h3 desafío
+              li
+                h3 conocimiento libre
+          div(style="float: right")
+            ul
+              li
+                h3 incertidumbre
+              li
+                h3 pasión
+              li
+                h3 libertad
+              li
+                h3 creatividad
+              li
+                h3 diversión
+
+        section.spaced
+          h2
+            i "Un hacker es aquel que trabaja con gran pasión y entusiasmo por lo que hace."
+          br
+          h4
+            | Himanen Pekka,
+            | <i>La ética del hacker y el espíritu de la era de la información</i>
+
+        section
+          h2 Los emprededores
+          h2.fragment somos
+          h1.fragment hackers
+
+        section
+          h1 No hay cambio sin experimento
+          h3 La experiencia de
+            a(href='http://escuelab.org' target='_blank') escuelab.org
           p
             small
-              | Created by
-              a(href='http://hakim.se') Hakim El Hattab
+              | Mariano Crowe
               | /
-              a(href='http://twitter.com/hakimel') @hakimel
-        section
-          h2 Heads Up
+              a(href='http://twitter.com/escuelab') @escuelab
+              | /
+              | <iframe src="http://ghbtns.com/github-btn.html?user=merunga&repo=enji2013&type=follow" allowtransparency="true" frameborder="0" scrolling="0" width="150" height="25"></iframe>
           p
-            | reveal.js is a framework for easily creating beautiful presentations using HTML. You'll need a browser with
-            | support for CSS 3D transforms to see it in its full glory.
-          aside.notes
-            | Oh hey, these are some notes. They'll be hidden in your presentation, but you can see them if you open the speaker notes window (hit 's' on your keyboard).
-        //
-           Example of nested vertical slides 
+            small
+              a(href='http://creativecommons.org/licenses/by-sa/3.0/deed.es_CO', target='_blank')
+                img(src='http://es.creativecommons.org/blog/wp-content/uploads/2013/04/by-sa_petit.png', alt='cc-by-sa')
+
+
+
+      //
         section
           section
             h2 Vertical Slides
