imagenes y retoques finales

--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,7 @@
 section.spaced * {
   line-height: 1.3em;
 }
+img.limpia {
+  background-color: transparent !important;
+  border: none !important;
+}
