--- a/index.jade
+++ b/index.jade
@@ -2,7 +2,7 @@
 html(lang='en')
 head
     meta(charset='utf-8')
-    title Escuelab.org: "No hay cambio sin experimento" #enji2013
+    title escuelab.org: "No hay cambio sin experimento" #enji2013
     meta(name='description', content='Presentación para #enji2013')
     meta(name='author', content='Mariano Crowe')
     meta(name='apple-mobile-web-app-capable', content='yes')
@@ -28,23 +28,33 @@ head
         section
 
         section
-          h2 Mapa y foro de tunuyan
+          | <iframe width="950" height="550" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?f=d&amp;source=s_d&amp;saddr=Lima,+Departamento+de+Lima,+Per%C3%BA&amp;daddr=Tunuy%C3%A1n,+Mendoza,+Argentina&amp;hl=es-419&amp;geocode=FTgqSP8dxR9o-ylnllMe28gFkTEp2nugilNFTw%3BFaG-__0dIvHi-ylTd6l50CV8ljHDW4_qk2RMPg&amp;aq=0&amp;oq=lima&amp;sll=-22.800103,-70.988824&amp;sspn=25.350182,37.353516&amp;t=h&amp;dirflg=w&amp;mra=ltm&amp;ie=UTF8&amp;ll=-22.917923,-70.839844&amp;spn=82.217166,166.816406&amp;z=3&amp;output=embed"></iframe>
+          br
+          br
+          h4 Tunuyán, Mendoza, Argentina
           aside.notes
             | Tunuyán, un lugar hermoso, pero para un adolescente no pasa nada
 
         section
-          p
-            los primeros libros
+          img(src="images/tunuyan.jpg")
+          br
+          br
+          h4 Tunuyán, Mendoza, Argentina
+          aside.notes
+            | Tunuyan es un lugar hermoso, pero no hay ni siquiera una biblioteca municipal
+
+        section
+          img.limpia(src="images/libros.png" height="550")
 
         section
           h2 curiosidad
           h2 cuestionamiento
 
         section
-          h2 imagen universidad
+          img(src="images/biblioteca-fiuba.jpg")
 
         section
-          h2 imagen harry potter
+          img(src="images/biblioteca-hpotter.jpg")
           aside.notes
             ul
               li aprender a pensar pensando
@@ -52,7 +62,7 @@ head
               li open-source
               li con la cantidad de cosas que hay para aprender, por que estoy aprendiendo cosas q no quiero
 
-            h3 1er experimento -- dejar la universidad, comenzar a trabajar
+            p 1er experimento -- dejar la universidad, comenzar a trabajar
             ul
               li como practicante aprender solo a través de internet
 
@@ -60,14 +70,15 @@ head
           h2 conocimiento libre
           h2 incertidumbre
           h2 desafío
+          h2 aprendizaje bajo demanda
 
           aside.notes
             p Muchos experimentos: viajar, y trabajar en empresas grandes, medianas y pequeñas, como freelancer, hacer investigación
-            p Armar un arcenal de herramientas open source -- la herramienta correcta para el problema indicado
+            p Armar un arsenal de herramientas open source -- la herramienta correcta para el problema indicado
             p Principal problema: cuando uno se vuelve funcional a una empresa, tu jefe ya no quiere que hagas otra cosa
 
         section
-          h2 bored cat
+          img(src="images/bored-cat.jpg")
 
         section
           div
@@ -88,7 +99,14 @@ head
             i &iquest;No será que soy emprendedor?
 
         section
-          h2 kiko y escuelab
+          a(href="https://twitter.com/kikomayorga" target="_blank")
+            img(src="images/kiko.jpg")
+            p
+              small @kikomayorga
+          a(href="http://escuelab.org" target="_blank")
+            img(src="images/escuelab.jpg" style="height: 300px")
+            p
+              small @escuelab
 
         section
           section
@@ -120,7 +138,7 @@ head
             aside.notes
               | 100 followers en 2 meses, 2 años despues tiene 200
 
-          section
+          section.spaced
             h3 &iquest; Qué aprendimos?
             ul
               li
@@ -134,14 +152,11 @@ head
             h2 Hackatones y open data
 
           section
-            h2 fotos
+            img.limpia(src="images/hackatones.png")
             aside.notes
               | Hace 2 años comenzamos con la muni lima. El año pasado hicimos la hackatón de lima, este año la está organizando independientemente con los entregables de nuestro estudio
 
-          section
-            h2 lima.io
-
-          section
+          section.spaced
             h3 &iquest; Qué aprendimos?
             ul
               li
@@ -159,13 +174,13 @@ head
             h2 Apropiación tecnológica
 
           section
-            h2 fotos de techcamp, ciencia de garage y pixelhack
+            img.limpia(src="images/apropiacion.png")
             aside.notes
               | trabajamos con adolescentes, jovenes y ongs
               | los procesos con los jóvenes fueron un éxito
               | los procesos de las ongs quedaron truncos, porque sus problemas son demasiados comunes y aburridos
 
-          section
+          section.spaced
             h3 &iquest; Qué aprendimos?
             ul
               li
@@ -176,7 +191,9 @@ head
                   | <big>diversión</big>
                   | es fundamental
               li
-                h2 la apropiación no se puede tercerizar
+                h2 la apropiación no se puede tercerizar :P
+              li
+                h2 el aprendizaje entre pares funciona
 
         section
           section
@@ -184,9 +201,15 @@ head
             h2 Coworking
 
             aside.notes
-              | hoy estamos sin espacio y sin todavía saber si queremos uno
+              ul
+                li intentamos de todo
+                li promociones
+                li talleres
+                li parrilladas
+                li pero tuvimos que cerrar el espacio porque ya no podiamos mantenerlo
+                li hoy estamos sin espacio y sin todavía saber si queremos uno
 
-          section
+          section.spaced
             h3 &iquest; Qué aprendimos?
             ul
               li
@@ -194,7 +217,14 @@ head
               li
                 h2 espacios desaprovechados
               li
-                h2 gente chévere
+                h2 gente chévere &gt; espacio físico
+
+        section
+          h3 formas alternativas de aprendizaje
+          br
+          h2 aprendizaje experimental
+          h2 aprendizaje entre pares
+          h2 aprendizaje bajo demanda
 
         section(data-transition="none")
           h2 &nbsp;
@@ -255,13 +285,40 @@ head
             i "Un hacker es aquel que trabaja con gran pasión y entusiasmo por lo que hace."
           br
           h4
-            | Himanen Pekka,
+            | Pekka Himanen,
             | <i>La ética del hacker y el espíritu de la era de la información</i>
 
         section
           h2 Los emprededores
           h2.fragment somos
           h1.fragment hackers
+
+        section
+          h2 Valores del HACKER
+          div(style="float: left")
+            ul
+              li
+                h3 curiosidad
+              li
+                h3 cuestionamiento
+              li
+                h3 experimentación
+              li
+                h3 desafío
+              li
+                h3 conocimiento libre
+          div(style="float: right")
+            ul
+              li
+                h3 incertidumbre
+              li
+                h3 pasión
+              li
+                h3 libertad
+              li
+                h3 creatividad
+              li
+                h3 diversión
 
         section
           h1 No hay cambio sin experimento
@@ -279,249 +336,6 @@ head
               a(href='http://creativecommons.org/licenses/by-sa/3.0/deed.es_CO', target='_blank')
                 img(src='http://es.creativecommons.org/blog/wp-content/uploads/2013/04/by-sa_petit.png', alt='cc-by-sa')
 
-
-
-      //
-        section
-          section
-            h2 Vertical Slides
-            p
-              | Slides can be nested inside of other slides,
-              | try pressing
-              a.navigate-down(href='#') down
-              | .
-            a.image.navigate-down(href='#')
-              img(width='178', height='238', src='https://s3.amazonaws.com/hakim-static/reveal-js/arrow.png', alt='Down arrow')
-          section
-            h2 Basement Level 1
-            p Press down or up to navigate.
-          section
-            h2 Basement Level 2
-            p Cornify
-            a.test(href='http://cornify.com')
-              img(width='280', height='326', src='https://s3.amazonaws.com/hakim-static/reveal-js/cornify.gif', alt='Unicorn')
-          section
-            h2 Basement Level 3
-            p That's it, time to go back up.
-            a.image(href='#/2')
-              img(width='178', height='238', src='https://s3.amazonaws.com/hakim-static/reveal-js/arrow.png', alt='Up arrow', style='-webkit-transform: rotate(180deg);')
-        section
-          h2 Slides
-          p
-            | Not a coder? No problem. There's a fully-featured visual editor for authoring these, try it out at
-            a(href='http://slid.es', target='_blank') http://slid.es
-            | .
-        section
-          h2 Point of View
-          p
-            | Press
-            strong ESC
-            | to enter the slide overview.
-          p
-            | Hold down alt and click on any element to zoom in on it using
-            a(href='http://lab.hakim.se/zoom-js') zoom.js
-            | . Alt + click anywhere to zoom back out.
-        section
-          h2 Works in Mobile Safari
-          p
-            | Try it out! You can swipe through the slides and pinch your way to the overview.
-        section
-          h2 Marvelous Unordered List
-          ul
-            li No order here
-            li Or here
-            li Or here
-            li Or here
-        section
-          h2 Fantastic Ordered List
-          ol
-            li One is smaller than...
-            li Two is smaller than...
-            li Three!
-        section(data-markdown='data-markdown')
-          script(type='text/template')
-            ## Markdown support
-            For those of you who like that sort of thing. Instructions and a bit more info available [here](https://github.com/hakimel/reveal.js#markdown).
-            ```
-            <section data-markdown>
-            ## Markdown support
-            For those of you who like that sort of thing.
-            Instructions and a bit more info available [here](https://github.com/hakimel/reveal.js#markdown).
-            </section>
-            ```
-        section#transitions
-          h2 Transition Styles
-          p
-            | You can select from different transitions, like:
-            br
-            a(href='?transition=cube#/transitions') Cube
-            | -
-            a(href='?transition=page#/transitions') Page
-            | -
-            a(href='?transition=concave#/transitions') Concave
-            | -
-            a(href='?transition=zoom#/transitions') Zoom
-            | -
-            a(href='?transition=linear#/transitions') Linear
-            | -
-            a(href='?transition=fade#/transitions') Fade
-            | -
-            a(href='?transition=none#/transitions') None
-            | -
-            a(href='?#/transitions') Default
-        section#themes
-          h2 Themes
-          p
-            | Reveal.js comes with a few themes built in:
-            br
-            a(href='?#/themes') Default
-            | -
-            a(href='?theme=sky#/themes') Sky
-            | -
-            a(href='?theme=beige#/themes') Beige
-            | -
-            a(href='?theme=simple#/themes') Simple
-            | -
-            a(href='?theme=serif#/themes') Serif
-            | -
-            a(href='?theme=night#/themes') Night
-            br
-            a(href='?theme=moon.css#/themes') Moon
-            | -
-            a(href='?theme=simple.css#/themes') Simple
-            | -
-            a(href='?theme=solarized.css#/themes') Solarized
-          p
-            small
-              | * Theme demos are loaded after the presentation which leads to flicker. In production you should load your theme in the
-              code <head>
-              | using a
-              code <link>
-              | .
-        section
-          h2 Global State
-          p
-            | Set
-            code data-state="something"
-            | on a slide and
-            code "something"
-            | will be added as a class to the document element when the slide is open. This lets you
-            | apply broader style changes, like switching the background.
-        section(data-state='customevent')
-          h2 Custom Events
-          p
-            | Additionally custom events can be triggered on a per slide basis by binding to the
-            code data-state
-            | name.
-          pre.
-            
-        section
-          section(data-background='#007777')
-            h2 Slide Backgrounds
-            p
-              | Set
-              code data-background="#007777"
-              | on a slide to change the full page background to the given color. All CSS color formats are supported.
-            a.image.navigate-down(href='#')
-              img(width='178', height='238', src='https://s3.amazonaws.com/hakim-static/reveal-js/arrow.png', alt='Down arrow')
-          section(data-background='https://s3.amazonaws.com/hakim-static/reveal-js/arrow.png')
-            h2 Image Backgrounds
-            pre.
-              
-          section(data-background='https://s3.amazonaws.com/hakim-static/reveal-js/arrow.png', data-background-repeat='repeat', data-background-size='100px')
-            h2 Repeated Image Backgrounds
-            pre.
-              
-        section(data-transition='linear', data-background='#4d7e65', data-background-transition='slide')
-          h2 Background Transitions
-          p
-            | Pass reveal.js the
-            code backgroundTransition: 'slide'
-            | config argument to make backgrounds slide rather than fade.
-        section(data-transition='linear', data-background='#8c4738', data-background-transition='slide')
-          h2 Background Transition Override
-          p
-            | You can override background transitions per slide by using
-            code data-background-transition="slide"
-            | .
-        section
-          h2 Clever Quotes
-          p
-            | These guys come in two forms, inline:
-            q(cite='http://searchservervirtualization.techtarget.com/definition/Our-Favorite-Technology-Quotations')
-              | „The nice thing about standards is that there are so many to choose from”
-            | and block:
-          blockquote(cite='http://searchservervirtualization.techtarget.com/definition/Our-Favorite-Technology-Quotations')
-            | „For years there has been a theory that millions of monkeys typing at random on millions of typewriters would
-            | reproduce the entire works of Shakespeare. The Internet has proven this theory to be untrue.”
-        section
-          h2 Pretty Code
-          pre.
-            
-          p
-            | Courtesy of
-            a(href='http://softwaremaniacs.org/soft/highlight/en/description/') highlight.js
-            | .
-        section
-          h2 Intergalactic Interconnections
-          p
-            | You can link between slides internally,
-            a(href='#/2/3') like this
-            | .
-        section
-          section
-            h2 Fragmented Views
-            p Hit the next arrow...
-            p.fragment ... to step through ...
-            ol
-              li.fragment
-                code any type
-              li.fragment
-                em of view
-              li.fragment
-                strong fragments
-            aside.notes
-              | This slide has fragments which are also stepped through in the notes window.
-          section
-            h2 Fragment Styles
-            p There's a few styles of fragments, like:
-            p.fragment.grow grow
-            p.fragment.shrink shrink
-            p.fragment.roll-in roll-in
-            p.fragment.fade-out fade-out
-            p.fragment.highlight-red highlight-red
-            p.fragment.highlight-green highlight-green
-            p.fragment.highlight-blue highlight-blue
-        section
-          h2 Spectacular image!
-          a.image(href='http://lab.hakim.se/meny/', target='_blank')
-            img(width='320', height='299', src='http://s3.amazonaws.com/hakim-static/portfolio/images/meny.png', alt='Meny')
-        section
-          h2 Export to PDF
-          p
-            | Presentations can be
-            a(href='https://github.com/hakimel/reveal.js#pdf-export') exported to PDF
-            | , below is an example that's been uploaded to SlideShare.
-          iframe#slideshare(src='http://www.slideshare.net/slideshow/embed_code/13872948', width='455', height='356', style='margin: 0; overflow: hidden; border: 1px solid #CCC; border-width: 1px 1px 0; margin-bottom: 5px;', allowfullscreen='allowfullscreen')  
-          script
-            document.getElementById('slideshare').attributeName = 'allowfullscreen';
-        section
-          h2 Take a Moment
-          p
-            | Press b or period on your keyboard to enter the 'paused' mode. This mode is helpful when you want to take distracting slides off the screen
-            | during a presentation.
-        section
-          h2 Stellar Links
-          ul
-            li
-              a(href='http://slid.es') Try the online editor
-            li
-              a(href='https://github.com/hakimel/reveal.js') Source code on GitHub
-            li
-              a(href='http://twitter.com/hakimel') Follow me on Twitter
-        section
-          h1 THE END
-          h3 BY Hakim El Hattab / hakim.se
     script(src='lib/js/head.min.js')
     script(src='js/reveal.min.js')
     script
