--- a/index.jade
+++ b/index.jade
@@ -2,7 +2,7 @@
 html(lang='en')
 head
     meta(charset='utf-8')
-    title escuelab.org: "No hay cambio sin experimento" #enji2013
+    title "No hay cambio sin experimento" #enji2013
     meta(name='description', content='Presentación para #enji2013')
     meta(name='author', content='Mariano Crowe')
     meta(name='apple-mobile-web-app-capable', content='yes')
@@ -47,8 +47,10 @@ head
           img.limpia(src="images/libros.png" height="550")
 
         section
-          h2 curiosidad
-          h2 cuestionamiento
+          img(src="images/curiosidad.jpg")
+          aside.notes
+            | los libros se agotaron rapidamente
+            | pero por suerte llegaron las PCs
 
         section
           img(src="images/biblioteca-fiuba.jpg")
@@ -70,7 +72,6 @@ head
           h2 conocimiento libre
           h2 incertidumbre
           h2 desafío
-          h2 aprendizaje bajo demanda
 
           aside.notes
             p Muchos experimentos: viajar, y trabajar en empresas grandes, medianas y pequeñas, como freelancer, hacer investigación
@@ -79,24 +80,6 @@ head
 
         section
           img(src="images/bored-cat.jpg")
-
-        section
-          div
-            h2 monotonía
-            h2 aburrimiento
-
-          .fragment
-            h1 &ne; 
-            h2 libertad
-            h2 pasión
-            h2 diversión
-
-          aside.notes
-            p Ya nunca más voy a volver a poder trabajar en relación de dependencia
-
-        section.spaced
-          h1
-            i &iquest;No será que soy emprendedor?
 
         section
           a(href="https://twitter.com/kikomayorga" target="_blank")
@@ -110,121 +93,115 @@ head
 
         section
           section
-            h2 1er experimento:
-            h2
-              a(href="https://twitter.com/hablemosquechua" target="_blank") @hablemosquechua
-
-          section.tweets
-            div
-              | <blockquote class="twitter-tweet" align="center"><p>La palabra en quechua para &quot;amor&quot; podría ser &quot;khuyay&quot;</p>&mdash; hablemos quechua (@hablemosquechua) <a href="https://twitter.com/hablemosquechua/statuses/319590138407710720">April 3, 2013</a></blockquote>
-              | <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
-
-              | <blockquote class="twitter-tweet" align="center"><p>Cuando a los incas los hackeaban, ponian cara de preocupación y decian &quot;hackearpariwanchik&quot; via <a href="https://twitter.com/sankaypillo">@sankaypillo</a></p>&mdash; hablemos quechua (@hablemosquechua) <a href="https://twitter.com/hablemosquechua/statuses/378646908291399680">September 13, 2013</a></blockquote>
-              | <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
-
-            aside.notes
-              | 100 followers en 1 hora, 6000+ followers
-              | campaña para san valentin: trending topic en peru y 500 followers en un día
-
-
-          section.tweets
-            div
-              | <blockquote class="twitter-tweet" align="center"><p>Vecinos, ojo!&#10; ¿Caminar malecón ser peligroso? ¿Qué hará hoy mi alcalde?&#10; <a href="http://t.co/ZKt1HhNJ">http://t.co/ZKt1HhNJ</a></p>&mdash; Lléname tu Agenda (@llenametuagenda) <a href="https://twitter.com/llenametuagenda/statuses/128154511259873280">October 23, 2011</a></blockquote>
-              | <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
-
-              | <blockquote class="twitter-tweet" align="center"><p>Vecinos, en este momento.&#10; Atropellaron a un chico en la esquina.&#10; ¿Qué hizo la semana pasada mi alcalde?&#10; <a href="http://t.co/txIqOwxH">http://t.co/txIqOwxH</a></p>&mdash; Lléname tu Agenda (@llenametuagenda) <a href="https://twitter.com/llenametuagenda/statuses/126543663668019202">October 19, 2011</a></blockquote>
-              | <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
-
-            aside.notes
-              | 100 followers en 2 meses, 2 años despues tiene 200
+            h1 experimentos
+            img(src="images/experimento.jpg")
 
           section.spaced
-            h3 &iquest; Qué aprendimos?
-            ul
-              li
-                h2 poesía
-              li
-                h2 humanización
-
-        section
-          section
-            h2 2ndo experimento:
-            h2 Hackatones y open data
-
-          section
-            img.limpia(src="images/hackatones.png")
-            aside.notes
-              | Hace 2 años comenzamos con la muni lima. El año pasado hicimos la hackatón de lima, este año la está organizando independientemente con los entregables de nuestro estudio
+            h2.fragment.win un robot que enseña quechua por twitter
 
           section.spaced
-            h3 &iquest; Qué aprendimos?
-            ul
-              li
-                h2 es un proceso
-              li
-                h2 es replicable
-              li
-                h2 faltan datos abiertos
-              li
-                h2 sobra talento
-
-        section
-          section
-            h2 3er experimento:
-            h2 Apropiación tecnológica
-
-          section
-            img.limpia(src="images/apropiacion.png")
-            aside.notes
-              | trabajamos con adolescentes, jovenes y ongs
-              | los procesos con los jóvenes fueron un éxito
-              | los procesos de las ongs quedaron truncos, porque sus problemas son demasiados comunes y aburridos
+            h2.fragment.fail un taller de android mal promocionado
 
           section.spaced
-            h3 &iquest; Qué aprendimos?
-            ul
-              li
-                h2 los jóvenes son más ágiles
-              li
-                h2
-                  | la
-                  | <big>diversión</big>
-                  | es fundamental
-              li
-                h2 la apropiación no se puede tercerizar :P
-              li
-                h2 el aprendizaje entre pares funciona
-
-        section
-          section
-            h2 4to experimento:
-            h2 Coworking
-
-            aside.notes
-              ul
-                li intentamos de todo
-                li promociones
-                li talleres
-                li parrilladas
-                li pero tuvimos que cerrar el espacio porque ya no podiamos mantenerlo
-                li hoy estamos sin espacio y sin todavía saber si queremos uno
+            h2.fragment.win talleres con niños en la selva
 
           section.spaced
-            h3 &iquest; Qué aprendimos?
-            ul
-              li
-                h2 el centro de lima no es ideal
-              li
-                h2 espacios desaprovechados
-              li
-                h2 gente chévere &gt; espacio físico
+            h2.fragment.win experimentos electrónicos con adolescentes
+
+          section.spaced
+            h2.fragment.fail un robot que acusa a los alcaldes por twitter
+
+          section.spaced
+            h2.fragment.win un servidor wi-fi de fotos y libros
+
+          section.spaced
+            h2.fragment.win una estación de streaming con una XO
+
+          section.spaced
+            h2.fragment.win una app para saber que combi tomar
+
+          section.spaced
+            h2.fragment.fail apropiación tecnológica para ONGs
+
+          section.spaced
+            h2.fragment.fail un cartel de 1.5m de alto con 15 LEDs en línea
+
+          section.spaced
+            h2.fragment.win un video juego que te enseña a separar la basura
+
+          section.spaced
+            h2.fragment.fail una app para mapear la basura de tu barrio
+
+          section.spaced
+            h2.fragment.win una estación meteorológica basada en hardware libre
+
+          section.spaced
+            h2.fragment.fail activismo por la libertad de internet
+
+          section.spaced
+            h2.fragment.win una app para viajar seguro en taxi
+
+          section.spaced
+            h2.fragment.win talleres prácticos de arduino
+
+          section.spaced
+            h2.fragment.win un tacho de basura que te persigue
+
+          section.spaced
+            h2.fragment.fail un espacio de
+
+          section.spaced
+            h2.fragment.win un mapa con todos los ríos del perú
+
+          section.spaced
+            h2.fragment.fail la máquina impresora de software
+
+          section.spaced
+            h2.fragment.win ayudar al gobierno a liberar información
+
+          section.spaced
+            h2.fragment.fail trabajar con el estado ganando dinero
+
+          section.spaced
+            h2.fragment.fail la primer hackatón del perú
+
+          section.spaced
+            h2.fragment.win 4 hackatones más
+
+          section.spaced
+            h2.fragment.win invenciones con niños a 3000 msnm
+
+          section.spaced
+            h2.fragment.win parrilladas geek
+
+          section.spaced
+            h1.fragment ... y muchos experimentos más
 
         section
-          h3 formas alternativas de aprendizaje
+          img(src="images/hackers.jpg")
+
+        section
+          h1 hackers
+
+        section.spaced
+          h2.fragment.fail Un hacker es un delincuente informático
+
+        section.spaced
+          h2
+            i "Persona que disfruta del desafío intelectual de superar o evitar limitaciones a través de la creatividad"
+
+        section.spaced
+          h2
+            i "Un hacker es aquel que trabaja con gran pasión y entusiasmo por lo que hace."
           br
-          h2 aprendizaje experimental
-          h2 aprendizaje entre pares
-          h2 aprendizaje bajo demanda
+          h4
+            | Pekka Himanen,
+            | <i>La ética del hacker y el espíritu de la era de la información</i>
+
+        section
+          h2 Los emprededores
+          h2.fragment somos
+          h1.fragment hackers
 
         section(data-transition="none")
           h2 &nbsp;
@@ -233,7 +210,7 @@ head
               li
                 h3 curiosidad
               li
-                h3 cuestionamiento
+                h3 interés
               li
                 h3 experimentación
               li
@@ -260,7 +237,7 @@ head
               li
                 h3 curiosidad
               li
-                h3 cuestionamiento
+                h3 interés
               li
                 h3 experimentación
               li
@@ -279,51 +256,10 @@ head
                 h3 creatividad
               li
                 h3 diversión
+
 
         section.spaced
-          h2
-            i "Un hacker es aquel que trabaja con gran pasión y entusiasmo por lo que hace."
-          br
-          h4
-            | Pekka Himanen,
-            | <i>La ética del hacker y el espíritu de la era de la información</i>
-
-        section
-          h2 Los emprededores
-          h2.fragment somos
-          h1.fragment hackers
-
-        section
-          h2 Valores del HACKER
-          div(style="float: left")
-            ul
-              li
-                h3 curiosidad
-              li
-                h3 cuestionamiento
-              li
-                h3 experimentación
-              li
-                h3 desafío
-              li
-                h3 conocimiento libre
-          div(style="float: right")
-            ul
-              li
-                h3 incertidumbre
-              li
-                h3 pasión
-              li
-                h3 libertad
-              li
-                h3 creatividad
-              li
-                h3 diversión
-
-        section
           h1 No hay cambio sin experimento
-          h3 La experiencia de
-            a(href='http://escuelab.org' target='_blank') escuelab.org
           p
             small
               | Mariano Crowe
