--- a/css/main.css
+++ b/css/main.css
@@ -5,3 +5,26 @@ img.limpia {
   background-color: transparent !important;
   border: none !important;
 }
+.reveal .slides section .fragment.win {
+  opacity: 1;
+}
+.reveal .slides section .fragment.win.visible {
+  color: #008000;
+  -webkit-transform: scale(1.3);
+  -moz-transform: scale(1.3);
+  -ms-transform: scale(1.3);
+  -o-transform: scale(1.3);
+  transform: scale(1.3);
+}
+.reveal .slides section .fragment.fail {
+  opacity: 1;
+}
+.reveal .slides section .fragment.fail.visible {
+  color: #f00;
+  text-decoration: line-through;
+  -webkit-transform: scale(0.7);
+  -moz-transform: scale(0.7);
+  -ms-transform: scale(0.7);
+  -o-transform: scale(0.7);
+  transform: scale(0.7);
+}
