--- a/index.jade
+++ b/index.jade
@@ -174,11 +174,8 @@ head
           section.spaced
             h2.fragment.win parrilladas geek
 
-          section.spaced
-            h1.fragment ... y muchos experimentos más
-
-        section
-          img(src="images/hackers.jpg")
+        section.spaced
+          h1 ... y muchos experimentos más
 
         section
           h1 hackers
@@ -200,37 +197,11 @@ head
 
         section
           h2 Los emprededores
-          h2.fragment somos
-          h1.fragment hackers
+          div.fragment
+            h2 somos
+            h1 hackers
 
-        section(data-transition="none")
-          h2 &nbsp;
-          div(style="float: left")
-            ul
-              li
-                h3 curiosidad
-              li
-                h3 interés
-              li
-                h3 experimentación
-              li
-                h3 desafío
-              li
-                h3 conocimiento libre
-          div(style="float: right")
-            ul
-              li
-                h3 incertidumbre
-              li
-                h3 pasión
-              li
-                h3 libertad
-              li
-                h3 creatividad
-              li
-                h3 diversión
-
-        section(data-transition="none" style="clear: both;")
+        section.spaced
           h2 Valores del HACKER
           div(style="float: left")
             ul
