--- a/index.jade
+++ b/index.jade
@@ -240,6 +240,9 @@ head
               | <iframe src="http://ghbtns.com/github-btn.html?user=merunga&repo=enji2013&type=follow" allowtransparency="true" frameborder="0" scrolling="0" width="150" height="25"></iframe>
           p
             small
+              a(href="http://merunga.github.io/enji2013") merunga.github.io/enji2013
+          p
+            small
               a(href='http://creativecommons.org/licenses/by-sa/3.0/deed.es_CO', target='_blank')
                 img(src='http://es.creativecommons.org/blog/wp-content/uploads/2013/04/by-sa_petit.png', alt='cc-by-sa')
 
