pequeñas correcciones. curiosidad insaciable

--- a/index.jade
+++ b/index.jade
@@ -47,10 +47,14 @@ head
           img.limpia(src="images/libros.png" height="550")
 
         section
-          img(src="images/curiosidad.jpg")
+          h3 curiosidad insaciable
+          img(src="images/curiosidad.jpg" height="630")
           aside.notes
             | los libros se agotaron rapidamente
             | pero por suerte llegaron las PCs
+
+        section
+          h2 curiosidad insaciable
 
         section
           img(src="images/biblioteca-fiuba.jpg")
@@ -69,7 +73,12 @@ head
               li como practicante aprender solo a través de internet
 
         section
+          h2 curiosidad insaciable
+
+        section
           h2 conocimiento libre
+
+        section
           h2 incertidumbre
           h2 desafío
 
@@ -82,14 +91,17 @@ head
           img(src="images/bored-cat.jpg")
 
         section
-          a(href="https://twitter.com/kikomayorga" target="_blank")
-            img(src="images/kiko.jpg")
-            p
-              small @kikomayorga
+          h2 curiosidad insaciable
+
+        section
           a(href="http://escuelab.org" target="_blank")
             img(src="images/escuelab.jpg" style="height: 300px")
             p
               small @escuelab
+          a(href="https://twitter.com/kikomayorga" target="_blank")
+            img(src="images/kiko.jpg")
+            p
+              small @kikomayorga
 
         section
           section
@@ -148,13 +160,13 @@ head
             h2.fragment.win un tacho de basura que te persigue
 
           section.spaced
-            h2.fragment.fail un espacio de
+            h2.fragment.fail un espacio de coworking
 
           section.spaced
             h2.fragment.win un mapa con todos los ríos del perú
 
           section.spaced
-            h2.fragment.fail la máquina impresora de software
+            h2.fragment.fail la máquina impresora de software libre
 
           section.spaced
             h2.fragment.win ayudar al gobierno a liberar información
@@ -176,6 +188,9 @@ head
 
         section.spaced
           h1 ... y muchos experimentos más
+
+        section
+          h2 curiosidad insaciable
 
         section
           h1 hackers
@@ -228,6 +243,8 @@ head
               li
                 h3 diversión
 
+        section
+          h2 curiosidad insaciable
 
         section.spaced
           h1 No hay cambio sin experimento
