--- a/index.jade
+++ b/index.jade
@@ -112,49 +112,16 @@ head
             h2.fragment.win un robot que enseña quechua por twitter
 
           section.spaced
-            h2.fragment.fail un taller de android mal promocionado
-
-          section.spaced
-            h2.fragment.win talleres con niños en la selva
-
-          section.spaced
-            h2.fragment.win experimentos electrónicos con adolescentes
-
-          section.spaced
             h2.fragment.fail un robot que acusa a los alcaldes por twitter
 
           section.spaced
             h2.fragment.win un servidor wi-fi de fotos y libros
 
           section.spaced
-            h2.fragment.win una estación de streaming con una XO
+            h2.fragment.win talleres con niños en la selva
 
           section.spaced
-            h2.fragment.win una app para saber que combi tomar
-
-          section.spaced
-            h2.fragment.fail apropiación tecnológica para ONGs
-
-          section.spaced
-            h2.fragment.fail un cartel de 1.5m de alto con 15 LEDs en línea
-
-          section.spaced
-            h2.fragment.win un video juego que te enseña a separar la basura
-
-          section.spaced
-            h2.fragment.fail una app para mapear la basura de tu barrio
-
-          section.spaced
-            h2.fragment.win una estación meteorológica basada en hardware libre
-
-          section.spaced
-            h2.fragment.fail activismo por la libertad de internet
-
-          section.spaced
-            h2.fragment.win una app para viajar seguro en taxi
-
-          section.spaced
-            h2.fragment.win talleres prácticos de arduino
+            h2.fragment.win experimentos electrónicos con adolescentes
 
           section.spaced
             h2.fragment.win un tacho de basura que te persigue
@@ -181,10 +148,44 @@ head
             h2.fragment.win 4 hackatones más
 
           section.spaced
-            h2.fragment.win invenciones con niños a 3000 msnm
+            h2.fragment.fail apropiación tecnológica para ONGs
+
+          section.spaced
+            h2.fragment.fail activismo por la libertad de internet
+
+          section.spaced
+            h2.fragment.win una estación meteorológica basada en hardware libre
+
+          section.spaced
+            h2.fragment.win una estación de streaming con una XO
+
+          section.spaced
+            h2.fragment.win una app para saber que combi tomar
 
           section.spaced
             h2.fragment.win parrilladas geek
+
+          section.spaced
+            h2.fragment.fail un cartel de 1.5m de alto con 15 LEDs en línea
+
+          section.spaced
+            h2.fragment.win un video juego que te enseña a separar la basura
+
+          section.spaced
+            h2.fragment.win talleres prácticos de arduino
+
+          section.spaced
+            h2.fragment.fail una app para mapear la basura de tu barrio
+
+          section.spaced
+            h2.fragment.win una app para viajar seguro en taxi
+
+          section.spaced
+            h2.fragment.fail un taller de android mal promocionado
+
+          section.spaced
+            h2.fragment.win invenciones con niños a en medio de la sierra
+
 
         section.spaced
           h1 ... y muchos experimentos más
@@ -217,7 +218,8 @@ head
             h1 hackers
 
         section.spaced
-          h2 Valores del HACKER
+          h2 Valores del
+          h2 Hacker / Emprendedor
           div(style="float: left")
             ul
               li
