--- a/index.jade
+++ b/index.jade
@@ -103,88 +103,88 @@ head
             p
               small @kikomayorga
 
+        // section
         section
-          section
-            h1 experimentos
-            img(src="images/experimento.jpg")
+          h1 experimentos
+          img(src="images/experimento.jpg")
 
-          section.spaced
-            h2.fragment.win un robot que enseña quechua por twitter
+        section.spaced
+          h2.fragment.win un robot que enseña quechua por twitter
 
-          section.spaced
-            h2.fragment.fail un robot que acusa a los alcaldes por twitter
+        section.spaced
+          h2.fragment.fail un robot que acusa a los alcaldes por twitter
 
-          section.spaced
-            h2.fragment.win un servidor wi-fi de fotos y libros
+        section.spaced
+          h2.fragment.win un servidor wi-fi de fotos y libros
 
-          section.spaced
-            h2.fragment.win talleres con niños en la selva
+        section.spaced
+          h2.fragment.win talleres con niños en la selva
 
-          section.spaced
-            h2.fragment.win experimentos electrónicos con adolescentes
+        section.spaced
+          h2.fragment.win experimentos electrónicos con adolescentes
 
-          section.spaced
-            h2.fragment.win un tacho de basura que te persigue
+        section.spaced
+          h2.fragment.win un tacho de basura que te persigue
 
-          section.spaced
-            h2.fragment.fail un espacio de coworking
+        section.spaced
+          h2.fragment.fail un espacio de coworking
 
-          section.spaced
-            h2.fragment.win un mapa con todos los ríos del perú
+        section.spaced
+          h2.fragment.win un mapa con todos los ríos del perú
 
-          section.spaced
-            h2.fragment.fail la máquina impresora de software libre
+        section.spaced
+          h2.fragment.fail la máquina impresora de software libre
 
-          section.spaced
-            h2.fragment.win ayudar al gobierno a liberar información
+        section.spaced
+          h2.fragment.win ayudar al gobierno a liberar información
 
-          section.spaced
-            h2.fragment.fail trabajar con el estado ganando dinero
+        section.spaced
+          h2.fragment.fail trabajar con el estado ganando dinero
 
-          section.spaced
-            h2.fragment.fail la primer hackatón del perú
+        section.spaced
+          h2.fragment.fail la primer hackatón del perú
 
-          section.spaced
-            h2.fragment.win 4 hackatones más
+        section.spaced
+          h2.fragment.win 4 hackatones más
 
-          section.spaced
-            h2.fragment.fail apropiación tecnológica para ONGs
+        section.spaced
+          h2.fragment.fail apropiación tecnológica para ONGs
 
-          section.spaced
-            h2.fragment.fail activismo por la libertad de internet
+        section.spaced
+          h2.fragment.fail activismo por la libertad de internet
 
-          section.spaced
-            h2.fragment.win una estación meteorológica basada en hardware libre
+        section.spaced
+          h2.fragment.win una estación meteorológica basada en hardware libre
 
-          section.spaced
-            h2.fragment.win una estación de streaming con una XO
+        section.spaced
+          h2.fragment.win una estación de streaming con una XO
 
-          section.spaced
-            h2.fragment.win una app para saber que combi tomar
+        section.spaced
+          h2.fragment.win una app para saber que combi tomar
 
-          section.spaced
-            h2.fragment.win parrilladas geek
+        section.spaced
+          h2.fragment.win parrilladas geek
 
-          section.spaced
-            h2.fragment.fail un cartel de 1.5m de alto con 15 LEDs en línea
+        section.spaced
+          h2.fragment.fail un cartel de 1.5m de alto con 15 LEDs en línea
 
-          section.spaced
-            h2.fragment.win un video juego que te enseña a separar la basura
+        section.spaced
+          h2.fragment.win un video juego que te enseña a separar la basura
 
-          section.spaced
-            h2.fragment.win talleres prácticos de arduino
+        section.spaced
+          h2.fragment.win talleres prácticos de arduino
 
-          section.spaced
-            h2.fragment.fail una app para mapear la basura de tu barrio
+        section.spaced
+          h2.fragment.fail una app para mapear la basura de tu barrio
 
-          section.spaced
-            h2.fragment.win una app para viajar seguro en taxi
+        section.spaced
+          h2.fragment.win una app para viajar seguro en taxi
 
-          section.spaced
-            h2.fragment.fail un taller de android mal promocionado
+        section.spaced
+          h2.fragment.fail un taller de android mal promocionado
 
-          section.spaced
-            h2.fragment.win invenciones con niños a en medio de la sierra
+        section.spaced
+          h2.fragment.win invenciones con niños a en medio de la sierra
 
 
         section.spaced
