--- a/index.jade
+++ b/index.jade
@@ -103,7 +103,7 @@ head
             p
               small @kikomayorga
 
-        // section
+        // section lineal
         section
           h1 experimentos
           img(src="images/experimento.jpg")
